Fixing the case where the PassengerStopAssignment is in line file instead of line file.